| Bug #28842 | Different 'duplicate key' error code between 5.0 and 5.1 | ||
|---|---|---|---|
| Submitted: | 1 Jun 2007 19:33 | Modified: | 18 Jun 2007 17:08 |
| Reporter: | Domas Mituzas | ||
| Status: | Closed | ||
| Category: | Server: Errors | Severity: | S2 (Serious) |
| Version: | 5.1-bk | OS: | Any |
| Assigned to: | Jim Winstead | Target Version: | |
[1 Jun 2007 19:33]
Domas Mituzas
[1 Jun 2007 19:53]
Sergei Golubchik
you cannot change the history
[2 Jun 2007 5:44]
Jim Winstead
maybe i'm missing something obvious, but i don't see why the error code had to change for the message to change. the code is calling my_printf_error(ER_DUP_ENTRY_WITH_KEY_NAME, msg, ...) in handler::print_keydup_error, where msg is either ER(ER_DUP_ENTRY_WITH_KEY_NAME) or ER(ER_DUP_ENTRY_AUTOINCREMENT_CASE) seems to me that it could just be my_printf_error(ER_DUP_ENTRY, msg, ...) and we'd still get the key name in the error message, but the error code would not change. best of both worlds?
[2 Jun 2007 10:44]
Sergei Golubchik
Yes, I think it's possible. Good idea.
[6 Jun 2007 19:38]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/28227 ChangeSet@1.2545, 2007-06-06 10:57:07-07:00, jimw@rama.(none) +58 -0 Bug #28842 Different 'duplicate key' error code between 5.0 and 5.1 The patch for WL 1563 added a new duplicate key error message so that the key name could be provided instead of the key number. But the error code for the new message was used even though that did not need to change. This could cause unnecessary problems for applications that used the old ER_DUP_ENTRY error code to detect duplicate key errors.
[8 Jun 2007 3:30]
Jim Winstead
Queued in the mysql-5.1-new-maint tree.
[16 Jun 2007 6:51]
Bugs System
Pushed into 5.1.20-beta
[18 Jun 2007 17:08]
Paul DuBois
Noted in 5.1.20 changelog. Updated previous related 5.1.15 changelog entry.
